--- a/PracticaJuegoFinalAngelSalasCalvo/app/src/main/res/layout/dialogo_ganador.xml
+++ b/PracticaJuegoFinalAngelSalasCalvo/app/src/main/res/layout/dialogo_ganador.xml
@@ -26,13 +26,14 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
         android:layout_marginEnd="32dp"
         android:text="@string/txtGanador"
+        android:textAlignment="center"
+        app:layout_constraintBottom_toBottomOf="@+id/ivCasco"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.49"
         app:layout_constraintStart_toEndOf="@+id/ivCasco"
-        app:layout_constraintTop_toBottomOf="@+id/tvTituloGanador" />
+        app:layout_constraintTop_toTopOf="@+id/ivCasco" />
 
     <TextView
         android:id="@+id/tvTxt2"
@@ -42,6 +43,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="32dp"
         android:text="@string/txtGanador2"
+        android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ivCasco" />
